--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
   <div class="copy">发送这个网址链接给好友开始通话</div>
-  <video id="localVideo" autoplay muted></video>
-  <video id="remoteVideo" autoplay></video>
+  <video id="localVideo" controls="controls" autoplay muted></video>
+  <video id="remoteVideo" controls="controls" autoplay></video>
   <script src="client.js"></script>
 </body>
 </html>
