--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       height: 100vh;
       margin: 0;
       align-items: center;
-      bgcolor：rgb(176,224,230)；
+      color：rgb(176,224,230);
       justify-content: center;
       padding: 0 50px;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
